test/fail_compilation/imports/import18517c.d
import import18517a;
